@@ -19,8 +19,10 @@ LanguageTool Change Log
     -New rule that checks if a weekday matches a date, e.g. detects
      "Monday, 7 October 2014", as that date isn't a Monday. This rule will only
      work if it detects the date format in use. So far, only these formats are supported:
-     * "Monday, 7 October 2014"
-     * "Monday, October 7, 2014"
+       * "Monday, 7 October 2014"
+       * "Monday, 7 Oct 2014"
+       * "Monday, October 7, 2014"
+       * "Monday, Oct 7, 2014"
 
 -Persian:
     -added initial support for Persian (Farsi)
